--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,14 @@ body, html {
   
   .content {
     margin-left: 250px;
-    padding: 20px;
+    padding: 0;
+    height: 100%;
+    overflow: auto; 
   }
   
   .content iframe {
     width: 100%;
-    height: calc(100% - 40px);
+    height: 100%;
+    border: none;
   }
   
